// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalNavigation /> collapsable closed vertical navigation should render correctly 1`] = `
<WithStyles(VerticalNavigation)
  isCollapsable={true}
  isOpen={false}
  position="fixed"
  toggleOpenCallback={[MockFunction]}
>
  <VerticalNavigation
    classes={
      Object {
        "noCollapse": "HvVerticalNavigation-noCollapse",
        "root": "HvVerticalNavigation-root",
      }
    }
    isCollapsable={true}
    isOpen={false}
    position="fixed"
    toggleOpenCallback={[MockFunction]}
  >
    <WithStyles(VerticalContainer)
      closeOnExit={false}
      isAnchorBarVisible={true}
      isOpen={false}
      position="fixed"
      toggleOpenCallback={[MockFunction]}
    >
      <VerticalContainer
        classes={
          Object {
            "absolute": "HvVerticalNavigationVerticalContainer-absolute",
            "anchorBar": "HvVerticalNavigationVerticalContainer-anchorBar",
            "button": "HvVerticalNavigationVerticalContainer-button",
            "contentContainer": "HvVerticalNavigationVerticalContainer-contentContainer",
            "fixed": "HvVerticalNavigationVerticalContainer-fixed",
            "relative": "HvVerticalNavigationVerticalContainer-relative",
            "root": "HvVerticalNavigationVerticalContainer-root",
            "separator": "HvVerticalNavigationVerticalContainer-separator",
            "static": "HvVerticalNavigationVerticalContainer-static",
            "verticalContainer": "HvVerticalNavigationVerticalContainer-verticalContainer",
            "withAnchorBar": "HvVerticalNavigationVerticalContainer-withAnchorBar",
          }
        }
        closeOnExit={false}
        isAnchorBarVisible={true}
        isOpen={false}
        position="fixed"
        toggleOpenCallback={[MockFunction]}
      >
        <div
          className="HvVerticalNavigationVerticalContainer-root HvVerticalNavigationVerticalContainer-withAnchorBar HvVerticalNavigationVerticalContainer-fixed"
        >
          <ClickAwayListener
            onClickAway={[Function]}
          >
            <div
              className="HvVerticalNavigationVerticalContainer-verticalContainer"
              onClick={[Function]}
              onTouchEnd={[Function]}
            >
              <div
                className="HvVerticalNavigationVerticalContainer-anchorBar"
              >
                <WithStyles(HvButton)
                  aria-label="open"
                  buttonRef={
                    Object {
                      "current": <button
                        aria-label="open"
                        class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label"
                        >
                          <div
                            class="HvIconMenu-root HvIconMenu-rootS"
                          >
                            <svg
                              focusable="false"
                              height="16px"
                              viewBox="0 0 16 16"
                              width="16px"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class="color0"
                                d="M0 7.5h16v1H0zM0 2h16v1H0zm0 11h16v1H0z"
                                fill="#414141"
                              />
                            </svg>
                          </div>
                        </span>
                      </button>,
                    }
                  }
                  category="icon"
                  className="HvVerticalNavigationVerticalContainer-button"
                  onClick={[Function]}
                >
                  <HvButton
                    aria-label="open"
                    buttonRef={
                      Object {
                        "current": <button
                          aria-label="open"
                          class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <div
                              class="HvIconMenu-root HvIconMenu-rootS"
                            >
                              <svg
                                focusable="false"
                                height="16px"
                                viewBox="0 0 16 16"
                                width="16px"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="color0"
                                  d="M0 7.5h16v1H0zM0 2h16v1H0zm0 11h16v1H0z"
                                  fill="#414141"
                                />
                              </svg>
                            </div>
                          </span>
                        </button>,
                      }
                    }
                    category="icon"
                    className="HvVerticalNavigationVerticalContainer-button"
                    classes={
                      Object {
                        "ghost": "HvButton-ghost",
                        "ghostDisabled": "HvButton-ghostDisabled",
                        "ghostSecondary": "HvButton-ghostSecondary",
                        "ghostSecondaryDisabled": "HvButton-ghostSecondaryDisabled",
                        "primary": "HvButton-primary",
                        "primaryDisabled": "HvButton-primaryDisabled",
                        "root": "HvButton-root",
                        "rootIcon": "HvButton-rootIcon",
                        "secondary": "HvButton-secondary",
                        "secondaryDisabled": "HvButton-secondaryDisabled",
                        "semantic": "HvButton-semantic",
                        "semanticDisabled": "HvButton-semanticDisabled",
                        "startIcon": "HvButton-startIcon",
                      }
                    }
                    onClick={[Function]}
                  >
                    <WithStyles(ForwardRef(Button))
                      aria-label="open"
                      buttonRef={
                        Object {
                          "current": <button
                            aria-label="open"
                            class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              <div
                                class="HvIconMenu-root HvIconMenu-rootS"
                              >
                                <svg
                                  focusable="false"
                                  height="16px"
                                  viewBox="0 0 16 16"
                                  width="16px"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    class="color0"
                                    d="M0 7.5h16v1H0zM0 2h16v1H0zm0 11h16v1H0z"
                                    fill="#414141"
                                  />
                                </svg>
                              </div>
                            </span>
                          </button>,
                        }
                      }
                      className="HvVerticalNavigationVerticalContainer-button HvButton-rootIcon"
                      classes={
                        Object {
                          "containedPrimary": "HvButton-primary",
                          "disabled": "HvButton-ghostDisabled",
                          "outlinedPrimary": "HvButton-secondary",
                          "root": "HvButton-root",
                          "startIcon": "HvButton-startIcon",
                          "textPrimary": "HvButton-ghost",
                        }
                      }
                      color="primary"
                      disableRipple={true}
                      onClick={[Function]}
                      variant="text"
                    >
                      <ForwardRef(Button)
                        aria-label="open"
                        buttonRef={
                          Object {
                            "current": <button
                              aria-label="open"
                              class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label"
                              >
                                <div
                                  class="HvIconMenu-root HvIconMenu-rootS"
                                >
                                  <svg
                                    focusable="false"
                                    height="16px"
                                    viewBox="0 0 16 16"
                                    width="16px"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      class="color0"
                                      d="M0 7.5h16v1H0zM0 2h16v1H0zm0 11h16v1H0z"
                                      fill="#414141"
                                    />
                                  </svg>
                                </div>
                              </span>
                            </button>,
                          }
                        }
                        className="HvVerticalNavigationVerticalContainer-button HvButton-rootIcon"
                        classes={
                          Object {
                            "colorInherit": "MuiButton-colorInherit",
                            "contained": "MuiButton-contained",
                            "containedPrimary": "MuiButton-containedPrimary HvButton-primary",
                            "containedSecondary": "MuiButton-containedSecondary",
                            "containedSizeLarge": "MuiButton-containedSizeLarge",
                            "containedSizeSmall": "MuiButton-containedSizeSmall",
                            "disableElevation": "MuiButton-disableElevation",
                            "disabled": "Mui-disabled HvButton-ghostDisabled",
                            "endIcon": "MuiButton-endIcon",
                            "focusVisible": "Mui-focusVisible",
                            "fullWidth": "MuiButton-fullWidth",
                            "iconSizeLarge": "MuiButton-iconSizeLarge",
                            "iconSizeMedium": "MuiButton-iconSizeMedium",
                            "iconSizeSmall": "MuiButton-iconSizeSmall",
                            "label": "MuiButton-label",
                            "outlined": "MuiButton-outlined",
                            "outlinedPrimary": "MuiButton-outlinedPrimary HvButton-secondary",
                            "outlinedSecondary": "MuiButton-outlinedSecondary",
                            "outlinedSizeLarge": "MuiButton-outlinedSizeLarge",
                            "outlinedSizeSmall": "MuiButton-outlinedSizeSmall",
                            "root": "MuiButton-root HvButton-root",
                            "sizeLarge": "MuiButton-sizeLarge",
                            "sizeSmall": "MuiButton-sizeSmall",
                            "startIcon": "MuiButton-startIcon HvButton-startIcon",
                            "text": "MuiButton-text",
                            "textPrimary": "MuiButton-textPrimary HvButton-ghost",
                            "textSecondary": "MuiButton-textSecondary",
                            "textSizeLarge": "MuiButton-textSizeLarge",
                            "textSizeSmall": "MuiButton-textSizeSmall",
                          }
                        }
                        color="primary"
                        disableRipple={true}
                        onClick={[Function]}
                        variant="text"
                      >
                        <WithStyles(ForwardRef(ButtonBase))
                          aria-label="open"
                          buttonRef={
                            Object {
                              "current": <button
                                aria-label="open"
                                class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                                tabindex="0"
                                type="button"
                              >
                                <span
                                  class="MuiButton-label"
                                >
                                  <div
                                    class="HvIconMenu-root HvIconMenu-rootS"
                                  >
                                    <svg
                                      focusable="false"
                                      height="16px"
                                      viewBox="0 0 16 16"
                                      width="16px"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        class="color0"
                                        d="M0 7.5h16v1H0zM0 2h16v1H0zm0 11h16v1H0z"
                                        fill="#414141"
                                      />
                                    </svg>
                                  </div>
                                </span>
                              </button>,
                            }
                          }
                          className="MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                          component="button"
                          disableRipple={true}
                          disabled={false}
                          focusRipple={true}
                          focusVisibleClassName="Mui-focusVisible"
                          onClick={[Function]}
                          type="button"
                        >
                          <ForwardRef(ButtonBase)
                            aria-label="open"
                            buttonRef={
                              Object {
                                "current": <button
                                  aria-label="open"
                                  class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <div
                                      class="HvIconMenu-root HvIconMenu-rootS"
                                    >
                                      <svg
                                        focusable="false"
                                        height="16px"
                                        viewBox="0 0 16 16"
                                        width="16px"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          class="color0"
                                          d="M0 7.5h16v1H0zM0 2h16v1H0zm0 11h16v1H0z"
                                          fill="#414141"
                                        />
                                      </svg>
                                    </div>
                                  </span>
                                </button>,
                              }
                            }
                            className="MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                            classes={
                              Object {
                                "disabled": "Mui-disabled",
                                "focusVisible": "Mui-focusVisible",
                                "root": "MuiButtonBase-root",
                              }
                            }
                            component="button"
                            disableRipple={true}
                            disabled={false}
                            focusRipple={true}
                            focusVisibleClassName="Mui-focusVisible"
                            onClick={[Function]}
                            type="button"
                          >
                            <button
                              aria-label="open"
                              className="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onDragLeave={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              tabIndex={0}
                              type="button"
                            >
                              <span
                                className="MuiButton-label"
                              >
                                <WithStyles(Menu)>
                                  <Menu
                                    classes={
                                      Object {
                                        "root": "HvIconMenu-root",
                                        "rootL": "HvIconMenu-rootL",
                                        "rootM": "HvIconMenu-rootM",
                                        "rootS": "HvIconMenu-rootS",
                                        "rootXs": "HvIconMenu-rootXs",
                                      }
                                    }
                                  >
                                    <div
                                      className="HvIconMenu-root HvIconMenu-rootS"
                                    >
                                      <svg
                                        focusable={false}
                                        height="16px"
                                        viewBox="0 0 16 16"
                                        width="16px"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          className="color0"
                                          d="M0 7.5h16v1H0zM0 2h16v1H0zm0 11h16v1H0z"
                                          fill="#414141"
                                        />
                                      </svg>
                                    </div>
                                  </Menu>
                                </WithStyles(Menu)>
                              </span>
                            </button>
                          </ForwardRef(ButtonBase)>
                        </WithStyles(ForwardRef(ButtonBase))>
                      </ForwardRef(Button)>
                    </WithStyles(ForwardRef(Button))>
                  </HvButton>
                </WithStyles(HvButton)>
              </div>
            </div>
          </ClickAwayListener>
        </div>
      </VerticalContainer>
    </WithStyles(VerticalContainer)>
  </VerticalNavigation>
</WithStyles(VerticalNavigation)>
`;

exports[`<VerticalNavigation /> collapsable open vertical navigation should render correctly 1`] = `
<WithStyles(VerticalNavigation)
  isCollapsable={true}
  isOpen={true}
  position="fixed"
  toggleOpenCallback={[MockFunction]}
>
  <VerticalNavigation
    classes={
      Object {
        "noCollapse": "HvVerticalNavigation-noCollapse",
        "root": "HvVerticalNavigation-root",
      }
    }
    isCollapsable={true}
    isOpen={true}
    position="fixed"
    toggleOpenCallback={[MockFunction]}
  >
    <WithStyles(VerticalContainer)
      closeOnExit={false}
      isAnchorBarVisible={true}
      isOpen={true}
      position="fixed"
      toggleOpenCallback={[MockFunction]}
    >
      <VerticalContainer
        classes={
          Object {
            "absolute": "HvVerticalNavigationVerticalContainer-absolute",
            "anchorBar": "HvVerticalNavigationVerticalContainer-anchorBar",
            "button": "HvVerticalNavigationVerticalContainer-button",
            "contentContainer": "HvVerticalNavigationVerticalContainer-contentContainer",
            "fixed": "HvVerticalNavigationVerticalContainer-fixed",
            "relative": "HvVerticalNavigationVerticalContainer-relative",
            "root": "HvVerticalNavigationVerticalContainer-root",
            "separator": "HvVerticalNavigationVerticalContainer-separator",
            "static": "HvVerticalNavigationVerticalContainer-static",
            "verticalContainer": "HvVerticalNavigationVerticalContainer-verticalContainer",
            "withAnchorBar": "HvVerticalNavigationVerticalContainer-withAnchorBar",
          }
        }
        closeOnExit={false}
        isAnchorBarVisible={true}
        isOpen={true}
        position="fixed"
        toggleOpenCallback={[MockFunction]}
      >
        <div
          className="HvVerticalNavigationVerticalContainer-root HvVerticalNavigationVerticalContainer-withAnchorBar HvVerticalNavigationVerticalContainer-fixed"
        >
          <ClickAwayListener
            onClickAway={[Function]}
          >
            <div
              className="HvVerticalNavigationVerticalContainer-verticalContainer"
              onClick={[Function]}
              onTouchEnd={[Function]}
            >
              <div
                className="HvVerticalNavigationVerticalContainer-anchorBar"
              >
                <WithStyles(HvButton)
                  aria-label="close"
                  buttonRef={
                    Object {
                      "current": <button
                        aria-label="close"
                        class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label"
                        >
                          <div
                            class="HvIconMenu-root HvIconMenu-rootS"
                          >
                            <svg
                              focusable="false"
                              height="16px"
                              viewBox="0 0 16 16"
                              width="16px"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class="color0"
                                d="M0 7.5h16v1H0zM0 2h16v1H0zm0 11h16v1H0z"
                                fill="#414141"
                              />
                            </svg>
                          </div>
                        </span>
                      </button>,
                    }
                  }
                  category="icon"
                  className="HvVerticalNavigationVerticalContainer-button"
                  onClick={[Function]}
                >
                  <HvButton
                    aria-label="close"
                    buttonRef={
                      Object {
                        "current": <button
                          aria-label="close"
                          class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <div
                              class="HvIconMenu-root HvIconMenu-rootS"
                            >
                              <svg
                                focusable="false"
                                height="16px"
                                viewBox="0 0 16 16"
                                width="16px"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="color0"
                                  d="M0 7.5h16v1H0zM0 2h16v1H0zm0 11h16v1H0z"
                                  fill="#414141"
                                />
                              </svg>
                            </div>
                          </span>
                        </button>,
                      }
                    }
                    category="icon"
                    className="HvVerticalNavigationVerticalContainer-button"
                    classes={
                      Object {
                        "ghost": "HvButton-ghost",
                        "ghostDisabled": "HvButton-ghostDisabled",
                        "ghostSecondary": "HvButton-ghostSecondary",
                        "ghostSecondaryDisabled": "HvButton-ghostSecondaryDisabled",
                        "primary": "HvButton-primary",
                        "primaryDisabled": "HvButton-primaryDisabled",
                        "root": "HvButton-root",
                        "rootIcon": "HvButton-rootIcon",
                        "secondary": "HvButton-secondary",
                        "secondaryDisabled": "HvButton-secondaryDisabled",
                        "semantic": "HvButton-semantic",
                        "semanticDisabled": "HvButton-semanticDisabled",
                        "startIcon": "HvButton-startIcon",
                      }
                    }
                    onClick={[Function]}
                  >
                    <WithStyles(ForwardRef(Button))
                      aria-label="close"
                      buttonRef={
                        Object {
                          "current": <button
                            aria-label="close"
                            class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              <div
                                class="HvIconMenu-root HvIconMenu-rootS"
                              >
                                <svg
                                  focusable="false"
                                  height="16px"
                                  viewBox="0 0 16 16"
                                  width="16px"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    class="color0"
                                    d="M0 7.5h16v1H0zM0 2h16v1H0zm0 11h16v1H0z"
                                    fill="#414141"
                                  />
                                </svg>
                              </div>
                            </span>
                          </button>,
                        }
                      }
                      className="HvVerticalNavigationVerticalContainer-button HvButton-rootIcon"
                      classes={
                        Object {
                          "containedPrimary": "HvButton-primary",
                          "disabled": "HvButton-ghostDisabled",
                          "outlinedPrimary": "HvButton-secondary",
                          "root": "HvButton-root",
                          "startIcon": "HvButton-startIcon",
                          "textPrimary": "HvButton-ghost",
                        }
                      }
                      color="primary"
                      disableRipple={true}
                      onClick={[Function]}
                      variant="text"
                    >
                      <ForwardRef(Button)
                        aria-label="close"
                        buttonRef={
                          Object {
                            "current": <button
                              aria-label="close"
                              class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label"
                              >
                                <div
                                  class="HvIconMenu-root HvIconMenu-rootS"
                                >
                                  <svg
                                    focusable="false"
                                    height="16px"
                                    viewBox="0 0 16 16"
                                    width="16px"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      class="color0"
                                      d="M0 7.5h16v1H0zM0 2h16v1H0zm0 11h16v1H0z"
                                      fill="#414141"
                                    />
                                  </svg>
                                </div>
                              </span>
                            </button>,
                          }
                        }
                        className="HvVerticalNavigationVerticalContainer-button HvButton-rootIcon"
                        classes={
                          Object {
                            "colorInherit": "MuiButton-colorInherit",
                            "contained": "MuiButton-contained",
                            "containedPrimary": "MuiButton-containedPrimary HvButton-primary",
                            "containedSecondary": "MuiButton-containedSecondary",
                            "containedSizeLarge": "MuiButton-containedSizeLarge",
                            "containedSizeSmall": "MuiButton-containedSizeSmall",
                            "disableElevation": "MuiButton-disableElevation",
                            "disabled": "Mui-disabled HvButton-ghostDisabled",
                            "endIcon": "MuiButton-endIcon",
                            "focusVisible": "Mui-focusVisible",
                            "fullWidth": "MuiButton-fullWidth",
                            "iconSizeLarge": "MuiButton-iconSizeLarge",
                            "iconSizeMedium": "MuiButton-iconSizeMedium",
                            "iconSizeSmall": "MuiButton-iconSizeSmall",
                            "label": "MuiButton-label",
                            "outlined": "MuiButton-outlined",
                            "outlinedPrimary": "MuiButton-outlinedPrimary HvButton-secondary",
                            "outlinedSecondary": "MuiButton-outlinedSecondary",
                            "outlinedSizeLarge": "MuiButton-outlinedSizeLarge",
                            "outlinedSizeSmall": "MuiButton-outlinedSizeSmall",
                            "root": "MuiButton-root HvButton-root",
                            "sizeLarge": "MuiButton-sizeLarge",
                            "sizeSmall": "MuiButton-sizeSmall",
                            "startIcon": "MuiButton-startIcon HvButton-startIcon",
                            "text": "MuiButton-text",
                            "textPrimary": "MuiButton-textPrimary HvButton-ghost",
                            "textSecondary": "MuiButton-textSecondary",
                            "textSizeLarge": "MuiButton-textSizeLarge",
                            "textSizeSmall": "MuiButton-textSizeSmall",
                          }
                        }
                        color="primary"
                        disableRipple={true}
                        onClick={[Function]}
                        variant="text"
                      >
                        <WithStyles(ForwardRef(ButtonBase))
                          aria-label="close"
                          buttonRef={
                            Object {
                              "current": <button
                                aria-label="close"
                                class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                                tabindex="0"
                                type="button"
                              >
                                <span
                                  class="MuiButton-label"
                                >
                                  <div
                                    class="HvIconMenu-root HvIconMenu-rootS"
                                  >
                                    <svg
                                      focusable="false"
                                      height="16px"
                                      viewBox="0 0 16 16"
                                      width="16px"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        class="color0"
                                        d="M0 7.5h16v1H0zM0 2h16v1H0zm0 11h16v1H0z"
                                        fill="#414141"
                                      />
                                    </svg>
                                  </div>
                                </span>
                              </button>,
                            }
                          }
                          className="MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                          component="button"
                          disableRipple={true}
                          disabled={false}
                          focusRipple={true}
                          focusVisibleClassName="Mui-focusVisible"
                          onClick={[Function]}
                          type="button"
                        >
                          <ForwardRef(ButtonBase)
                            aria-label="close"
                            buttonRef={
                              Object {
                                "current": <button
                                  aria-label="close"
                                  class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <div
                                      class="HvIconMenu-root HvIconMenu-rootS"
                                    >
                                      <svg
                                        focusable="false"
                                        height="16px"
                                        viewBox="0 0 16 16"
                                        width="16px"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          class="color0"
                                          d="M0 7.5h16v1H0zM0 2h16v1H0zm0 11h16v1H0z"
                                          fill="#414141"
                                        />
                                      </svg>
                                    </div>
                                  </span>
                                </button>,
                              }
                            }
                            className="MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                            classes={
                              Object {
                                "disabled": "Mui-disabled",
                                "focusVisible": "Mui-focusVisible",
                                "root": "MuiButtonBase-root",
                              }
                            }
                            component="button"
                            disableRipple={true}
                            disabled={false}
                            focusRipple={true}
                            focusVisibleClassName="Mui-focusVisible"
                            onClick={[Function]}
                            type="button"
                          >
                            <button
                              aria-label="close"
                              className="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvVerticalNavigationVerticalContainer-button HvButton-rootIcon MuiButton-textPrimary HvButton-ghost"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onDragLeave={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              tabIndex={0}
                              type="button"
                            >
                              <span
                                className="MuiButton-label"
                              >
                                <WithStyles(Menu)>
                                  <Menu
                                    classes={
                                      Object {
                                        "root": "HvIconMenu-root",
                                        "rootL": "HvIconMenu-rootL",
                                        "rootM": "HvIconMenu-rootM",
                                        "rootS": "HvIconMenu-rootS",
                                        "rootXs": "HvIconMenu-rootXs",
                                      }
                                    }
                                  >
                                    <div
                                      className="HvIconMenu-root HvIconMenu-rootS"
                                    >
                                      <svg
                                        focusable={false}
                                        height="16px"
                                        viewBox="0 0 16 16"
                                        width="16px"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          className="color0"
                                          d="M0 7.5h16v1H0zM0 2h16v1H0zm0 11h16v1H0z"
                                          fill="#414141"
                                        />
                                      </svg>
                                    </div>
                                  </Menu>
                                </WithStyles(Menu)>
                              </span>
                            </button>
                          </ForwardRef(ButtonBase)>
                        </WithStyles(ForwardRef(ButtonBase))>
                      </ForwardRef(Button)>
                    </WithStyles(ForwardRef(Button))>
                  </HvButton>
                </WithStyles(HvButton)>
              </div>
              <div
                className="HvVerticalNavigationVerticalContainer-separator"
              />
              <div
                className="HvVerticalNavigationVerticalContainer-contentContainer"
                onKeyDown={[Function]}
              >
                <div
                  className="HvVerticalNavigation-root"
                >
                  <div>
                    1
                  </div>
                  <div>
                    2
                  </div>
                </div>
              </div>
            </div>
          </ClickAwayListener>
        </div>
      </VerticalContainer>
    </WithStyles(VerticalContainer)>
  </VerticalNavigation>
</WithStyles(VerticalNavigation)>
`;

exports[`<VerticalNavigation /> non-collapsable open vertical navigation should render correctly 1`] = `
<WithStyles(VerticalNavigation)
  isCollapsable={false}
  isOpen={true}
  position="fixed"
  toggleOpenCallback={[MockFunction]}
>
  <VerticalNavigation
    classes={
      Object {
        "noCollapse": "HvVerticalNavigation-noCollapse",
        "root": "HvVerticalNavigation-root",
      }
    }
    isCollapsable={false}
    isOpen={true}
    position="fixed"
    toggleOpenCallback={[MockFunction]}
  >
    <WithStyles(VerticalContainer)
      closeOnExit={false}
      isAnchorBarVisible={false}
      isOpen={true}
      position="fixed"
      toggleOpenCallback={[MockFunction]}
    >
      <VerticalContainer
        classes={
          Object {
            "absolute": "HvVerticalNavigationVerticalContainer-absolute",
            "anchorBar": "HvVerticalNavigationVerticalContainer-anchorBar",
            "button": "HvVerticalNavigationVerticalContainer-button",
            "contentContainer": "HvVerticalNavigationVerticalContainer-contentContainer",
            "fixed": "HvVerticalNavigationVerticalContainer-fixed",
            "relative": "HvVerticalNavigationVerticalContainer-relative",
            "root": "HvVerticalNavigationVerticalContainer-root",
            "separator": "HvVerticalNavigationVerticalContainer-separator",
            "static": "HvVerticalNavigationVerticalContainer-static",
            "verticalContainer": "HvVerticalNavigationVerticalContainer-verticalContainer",
            "withAnchorBar": "HvVerticalNavigationVerticalContainer-withAnchorBar",
          }
        }
        closeOnExit={false}
        isAnchorBarVisible={false}
        isOpen={true}
        position="fixed"
        toggleOpenCallback={[MockFunction]}
      >
        <div
          className="HvVerticalNavigationVerticalContainer-root HvVerticalNavigationVerticalContainer-fixed"
        >
          <ClickAwayListener
            onClickAway={[Function]}
          >
            <div
              className="HvVerticalNavigationVerticalContainer-verticalContainer"
              onClick={[Function]}
              onTouchEnd={[Function]}
            >
              <div
                className="HvVerticalNavigationVerticalContainer-contentContainer"
                onKeyDown={[Function]}
              >
                <div
                  className="HvVerticalNavigation-root"
                >
                  <div>
                    1
                  </div>
                  <div>
                    2
                  </div>
                </div>
              </div>
            </div>
          </ClickAwayListener>
        </div>
      </VerticalContainer>
    </WithStyles(VerticalContainer)>
  </VerticalNavigation>
</WithStyles(VerticalNavigation)>
`;

exports[`<VerticalNavigation /> non-collapsable open vertical navigation should render correctly 2`] = `
<WithStyles(VerticalNavigation)
  isCollapsable={false}
  isOpen={false}
  position="fixed"
  toggleOpenCallback={[MockFunction]}
>
  <VerticalNavigation
    classes={
      Object {
        "noCollapse": "HvVerticalNavigation-noCollapse",
        "root": "HvVerticalNavigation-root",
      }
    }
    isCollapsable={false}
    isOpen={false}
    position="fixed"
    toggleOpenCallback={[MockFunction]}
  >
    <WithStyles(VerticalContainer)
      closeOnExit={false}
      isAnchorBarVisible={false}
      isOpen={false}
      position="fixed"
      toggleOpenCallback={[MockFunction]}
    >
      <VerticalContainer
        classes={
          Object {
            "absolute": "HvVerticalNavigationVerticalContainer-absolute",
            "anchorBar": "HvVerticalNavigationVerticalContainer-anchorBar",
            "button": "HvVerticalNavigationVerticalContainer-button",
            "contentContainer": "HvVerticalNavigationVerticalContainer-contentContainer",
            "fixed": "HvVerticalNavigationVerticalContainer-fixed",
            "relative": "HvVerticalNavigationVerticalContainer-relative",
            "root": "HvVerticalNavigationVerticalContainer-root",
            "separator": "HvVerticalNavigationVerticalContainer-separator",
            "static": "HvVerticalNavigationVerticalContainer-static",
            "verticalContainer": "HvVerticalNavigationVerticalContainer-verticalContainer",
            "withAnchorBar": "HvVerticalNavigationVerticalContainer-withAnchorBar",
          }
        }
        closeOnExit={false}
        isAnchorBarVisible={false}
        isOpen={false}
        position="fixed"
        toggleOpenCallback={[MockFunction]}
      >
        <div
          className="HvVerticalNavigationVerticalContainer-root HvVerticalNavigationVerticalContainer-fixed"
        >
          <ClickAwayListener
            onClickAway={[Function]}
          >
            <div
              className="HvVerticalNavigationVerticalContainer-verticalContainer"
              onClick={[Function]}
              onTouchEnd={[Function]}
            />
          </ClickAwayListener>
        </div>
      </VerticalContainer>
    </WithStyles(VerticalContainer)>
  </VerticalNavigation>
</WithStyles(VerticalNavigation)>
`;
